--- a/packages/text/package.json
+++ b/packages/text/package.json
@@ -20,5 +20,6 @@
     "rollup-plugin-vue": "^5.0.1",
     "vue": "^2.6.10",
     "vue-template-compiler": "^2.6.10"
-  }
+  },
+  "gitHead": "329a6bed388e70d3057fa97437d7ff62d9de6607"
 }
