--- a/packages/text/package.json
+++ b/packages/text/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ruffus/text",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "main": "dist/text-component.umd.js",
   "module": "dist/text-component.esm.js",
   "unpkg": "dist/text-component.min.js",
@@ -19,11 +19,11 @@
   "devDependencies": {
     "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-commonjs": "^11.1.0",
+    "bulma": "^0.9.3",
     "rollup": "^1.17.0",
     "rollup-plugin-vue": "^5.0.1",
     "vue": "^2.6.10",
-    "vue-template-compiler": "^2.6.10",
-    "bulma": "^0.9.3"
+    "vue-template-compiler": "^2.6.10"
   },
   "gitHead": "9fce617dddd416c58b91cb907d8237dcfa9cc66c"
 }
