--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -17,6 +17,9 @@
     "build:es": "rollup --config build/rollup.config.js --format es --file dist/text-component.esm.js",
     "build:unpkg": "rollup --config build/rollup.config.js --format iife --file dist/text-component.min.js"
   },
+  "dependencies": {
+    "@ruffus/text": "^0.0.6"
+  },
   "devDependencies": {
     "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-commonjs": "^11.1.0",
