--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "@ruffus/text",
+  "name": "@ruffus/button",
   "version": "0.0.6",
   "license": "MIT",
-  "main": "dist/text-component.umd.js",
-  "module": "dist/text-component.esm.js",
-  "unpkg": "dist/text-component.min.js",
+  "main": "dist/button-component.umd.js",
+  "module": "dist/button-component.esm.js",
+  "unpkg": "dist/button-component.min.js",
   "browser": {
-    "./sfc": "src/text-component.vue"
+    "./sfc": "src/button-component.vue"
   },
   "publishConfig": {
     "access": "public"
   },
   "scripts": {
     "build": "npm run build:umd & npm run build:es & npm run build:unpkg",
-    "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/text-component.umd.js",
-    "build:es": "rollup --config build/rollup.config.js --format es --file dist/text-component.esm.js",
-    "build:unpkg": "rollup --config build/rollup.config.js --format iife --file dist/text-component.min.js"
+    "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/button-component.umd.js",
+    "build:es": "rollup --config build/rollup.config.js --format es --file dist/button-component.esm.js",
+    "build:unpkg": "rollup --config build/rollup.config.js --format iife --file dist/button-component.min.js"
   },
   "dependencies": {
     "@ruffus/text": "^0.0.6"
@@ -23,8 +23,9 @@
   "devDependencies": {
     "@rollup/plugin-buble": "^0.21.3",
     "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "bulma": "^0.9.3",
-    "rollup": "^1.17.0",
+    "rollup": "^2.42.0",
     "rollup-plugin-vue": "^5.0.1",
     "vue": "^2.6.10",
     "vue-template-compiler": "^2.6.10"
